--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
 
 		<title>crxextract</title>
 
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet" />
 		<link rel="icon" type="image/png" href="/favicon.png" />
 		<link rel="stylesheet" href="/global.css" />
 		<link rel="stylesheet" href="/build/bundle.css" />
