--- a/src/app.html
+++ b/src/app.html
@@ -9,12 +9,12 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet" />
-		<link rel="icon" type="image/png" href="/favicon.png" />
-		<link rel="stylesheet" href="/global.css" />
-		<link rel="stylesheet" href="/build/bundle.css" />
+		<link rel="icon" type="image/png" href="%sveltekit.assets%/favicon.png" />
 
-		<script defer src="/build/bundle.js"></script>
+		%sveltekit.head%
 	</head>
 
-	<body></body>
+	<body data-sveltekit-preload-data="hover">
+		%sveltekit.body%
+	</body>
 </html>
